helm/applications/skaha/skaha-config/service-carta-psrecord.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaha-carta-psrecord-svc-${skaha.sessionid}
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: Job
    name: "${skaha.jobname}"
    uid: "${skaha.jobuid}"
  labels:
    run: skaha-carta-psrecord-svc-${skaha.sessionid}
spec:
  ports:
  - port: 6901
    protocol: TCP
    name: http-connection
  selector:
    canfar-net-sessionID: ${skaha.sessionid}
