helm/applications/skaha/skaha-config/ingress-contributed.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: skaha-contributed-middleware-${skaha.sessionid}
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: Job
    name: "${skaha.jobname}"
    uid: "${skaha.jobuid}"
spec:
  replacePathRegex:
    regex: ^/session/contrib/${skaha.sessionid}(/|$)(.*)
    replacement: /$2

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skaha-contributed-ingress-${skaha.sessionid}
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: Job
    name: "${skaha.jobname}"
    uid: "${skaha.jobuid}"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`${skaha.sessions.hostname}`) && PathPrefix(`/session/contrib/${skaha.sessionid}/`)
    services:
    - kind: Service
      name: skaha-contributed-svc-${skaha.sessionid}
      port: 5000
      scheme: http
    middlewares:
      - name: skaha-contributed-middleware-${skaha.sessionid}
