helm/applications/skaha/skaha-config/ingress-notebook.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skaha-notebook-ingress-${skaha.sessionid}
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: Job
    name: "${skaha.jobname}"
    uid: "${skaha.jobuid}"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`${skaha.sessions.hostname}`) && PathPrefix(`/session/notebook/${skaha.sessionid}/`)
    services:
    - kind: Service
      name: skaha-notebook-svc-${skaha.sessionid}
      port: 8888
      scheme: http
